# labelwriter

./: .gitignore  LICENSE  README.md  cabal.project  default.nix  dir-locals-base.nix  labels.cabal  package.yaml
labels/: LICENSE  dir-locals.nix  labels.cabal
labels/src/: DevelMain.hs  Main.hs  Types.hs
labels/src/Data/: LWPixel.hs  Pixel.hs
labels/src/Data/Bits/: Utils.hs
labels/src/Data/Vector/Unboxed/: Pixel.hs
labels/src/Display/: Pipeline.hs  ShaderStages.hs  Shaders.hs
labelwriter/: README.md  labelwriter.cabal
labelwriter/src/: DevelMain.hs  Display.hs  Types.hs
labelwriter/src/Data/Bits/: Utils.hs
labelwriter/src/Data/Vector/Unboxed/: LWPixel.hs
labelwriter/src/Display/: Pipeline.hs  ShaderStages.hs  Shaders.hs
labelwriter/src/Display/GL/: Pipeline.hs  ShaderStages.hs  Shaders.hs
nih/gloss/: .gitrepo
nih/gloss/gloss/: gloss.cabal
nih/gloss/gloss/Graphics/Gloss/Internals/Interface/Backend/: GLFW.hs  GLUT.hs
nih/rapid/: .gitrepo  rapid.cabal
nix/: build.nix  nixpkgs-src.json
prelude/: ChangeLog.md  dir-locals.nix  prelude.cabal
prelude/src/: Prelude.hs
src/: CustomPrelude.hs  Main.hs  Types.hs
