name:           labels
version:        0.1.0.0
homepage:       https://github.com/vkleen/labels#readme
bug-reports:    https://github.com/vkleen/labels/issues
author:         Viktor Kleen
maintainer:     viktor@kleen.org
copyright:      2018 Viktor Kleen
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/vkleen/labels

flag devel
    default: False
    description: Enable development dependencies
    manual: True

executable labels
  main-is: Main.hs
  other-modules:
      DevelMain
    , Data.Bits.Utils
    , Data.LWPixel
    , Data.Vector.Unboxed.LWPixel
    , Display
    , Display.Shaders
    , Paths_labels
    , Types
  hs-source-dirs:
      src
  ghc-options: -Wall
               -Wno-name-shadowing
               -threaded -rtsopts
               -with-rtsopts=-N
               -Odph
               -fno-liberate-case
               -funfolding-use-threshold1000
               -funfolding-keeness-factor1000
               -fllvm
               -optlo-O3
  build-depends:
      base-noprelude >=4.11  && <4.12
    , GLFW-b
    , JuicyPixels
    , bytestring
    , colour
    , diagrams-contrib
    , diagrams-core
    , singletons
    , type-level-sets
    , either
    , superrecord
    , diagrams-lib
    , diagrams-rasterific
    , fused-effects
    , gl
    , gloss
    , lens
    , lens
    , prelude
    , primitive
    , raw-strings-qq
    , repa
    , repa-algorithms
    , resourcet
    , text
    , vector
  default-language: Haskell2010

  if flag(devel)
     build-depends: rapid
