name:           labelwriter
version:        0.1.0.0
homepage:       https://github.com/vkleen/labelwriter#readme
bug-reports:    https://github.com/vkleen/labelwriter/issues
author:         Viktor Kleen
maintainer:     viktor@kleen.org
copyright:      2019 Viktor Kleen
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/vkleen/labelwriter

flag devel
    default: False
    description: Enable development dependencies
    manual: True

executable labelwriter
  main-is: Main.hs
  other-modules:
      DevelMain
    , Data.Bits.Utils
    , Data.LWPixel
    , Data.Vector.Unboxed.LWPixel
    , Display
    , Display.GL.Shaders
    , Display.GL.ShaderStages
    , Display.GL.Pipeline
    , Paths_labelwriter
    , Types
  hs-source-dirs:
      src
  ghc-options: -Wall
               -Wno-name-shadowing
               -threaded -rtsopts
               -with-rtsopts=-N
               -fno-liberate-case
               -funfolding-use-threshold1000
               -funfolding-keeness-factor1000
               -fllvm
               -O2
               -optlo-O3
  build-depends:
      base-noprelude
    , GLFW-b
    , JuicyPixels
    , bytestring
    , colour
    , diagrams-contrib
    , diagrams-core
    , diagrams-lib
    , diagrams-rasterific
    , either
    , fixed-vector
    , fused-effects
    , gl
    , gloss
    , lens
    , prelude
    , primitive
    , raw-strings-qq
    , repa
    , repa-algorithms
    , safe-exceptions
    , singletons
    , text
    , vector
  default-language: Haskell2010

  if flag(devel)
     build-depends: rapid
